// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`updateBufferScannersGraphicData > should calculate correct dimensions and position 1`] = `
{
  "buffer": {
    "bufferPointer": 0,
    "memory": {
      "byteAddress": 0,
      "wordAlignedAddress": 0,
    },
    "showAddress": false,
    "showBinary": false,
    "showEndAddress": false,
  },
  "height": 32,
  "pointer": {
    "bufferPointer": 0,
    "memory": {
      "byteAddress": 40,
      "wordAlignedAddress": 10,
    },
    "showAddress": false,
    "showBinary": false,
    "showEndAddress": false,
  },
  "width": 76,
  "x": 24,
  "y": 16,
}
`;

exports[`updateBufferScannersGraphicData > should handle multiple buffer scanners 1`] = `
[
  {
    "buffer": {
      "bufferPointer": 0,
      "memory": {
        "byteAddress": 0,
        "wordAlignedAddress": 0,
      },
      "showAddress": false,
      "showBinary": false,
      "showEndAddress": false,
    },
    "height": 32,
    "pointer": {
      "bufferPointer": 0,
      "memory": {
        "byteAddress": 40,
        "wordAlignedAddress": 10,
      },
      "showAddress": false,
      "showBinary": false,
      "showEndAddress": false,
    },
    "width": 76,
    "x": 24,
    "y": 16,
  },
  {
    "buffer": {
      "bufferPointer": 0,
      "memory": {
        "byteAddress": 4,
        "default": 0,
        "elementWordSize": 1,
        "id": "buffer2",
        "isInteger": true,
        "isPointer": false,
        "isPointingToInteger": false,
        "isPointingToPointer": false,
        "numberOfElements": 100,
        "type": 1,
        "wordAlignedAddress": 1,
        "wordAlignedSize": 100,
      },
      "showAddress": false,
      "showBinary": false,
      "showEndAddress": false,
    },
    "height": 32,
    "pointer": {
      "bufferPointer": 0,
      "memory": {
        "byteAddress": 80,
        "default": 0,
        "elementWordSize": 1,
        "id": "pointer2",
        "isInteger": true,
        "isPointer": false,
        "isPointingToInteger": false,
        "isPointingToPointer": false,
        "numberOfElements": 1,
        "type": 0,
        "wordAlignedAddress": 20,
        "wordAlignedSize": 1,
      },
      "showAddress": false,
      "showBinary": false,
      "showEndAddress": false,
    },
    "width": 76,
    "x": 24,
    "y": 32,
  },
]
`;
